Fixes quote alignment

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -562,7 +562,7 @@ footer {
     .quote-highlight q:before {
       position: absolute;
       font-size: 160px;
-      top: -20px;
+      top: -22px;
       left: -90px;
       height: 80px;
       line-height: 1;
