--- a/assets/scss/quotes/_highlight.scss
+++ b/assets/scss/quotes/_highlight.scss
@@ -9,7 +9,7 @@
         &:before {
             position: absolute;
             font-size: 160px;
-            top: -20px;
+            top: -22px;
             left: -90px;
             height: 80px;
             line-height: 1;
